[gd_scene load_steps=6 format=3 uid="uid://dxlgcfljy03fc"]

[ext_resource type="Script" path="res://world.gd" id="1_7v252"]
[ext_resource type="PackedScene" uid="uid://6bkkmv4ivjdl" path="res://player.tscn" id="1_fkxig"]
[ext_resource type="PackedScene" uid="uid://hto73kftsvei" path="res://block.tscn" id="5_pj651"]
[ext_resource type="Texture2D" uid="uid://8jwb1c2e0ika" path="res://brick.png" id="6_lobm0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_87kdh"]
size = Vector2(1280, 160)

[node name="World" type="Node2D"]
script = ExtResource("1_7v252")

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 1280, 0, 1280, 720, 0, 720)

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(640, 640)
shape = SubResource("RectangleShape2D_87kdh")

[node name="Polygon2D" type="Polygon2D" parent="Ground"]
position = Vector2(-50, 6)
color = Color(0.188235, 0.188235, 0.188235, 1)
polygon = PackedVector2Array(50, 554, 1330, 554, 1330, 714, 50, 714)

[node name="Pixels" type="Node2D" parent="."]

[node name="Block" parent="." instance=ExtResource("5_pj651")]
position = Vector2(620, 480)

[node name="Block2" parent="." instance=ExtResource("5_pj651")]
position = Vector2(700, 320)

[node name="Block4" parent="." instance=ExtResource("5_pj651")]
position = Vector2(540, 320)

[node name="Block3" parent="." instance=ExtResource("5_pj651")]
position = Vector2(780, 160)

[node name="Block5" parent="." instance=ExtResource("5_pj651")]
position = Vector2(620, 160)

[node name="Block6" parent="." instance=ExtResource("5_pj651")]
position = Vector2(460, 160)

[node name="chunks" type="Node2D" parent="."]
position = Vector2(160, 480)

[node name="RigidBody2D" type="RigidBody2D" parent="chunks"]
position = Vector2(-38.4613, -38.2782)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="chunks/RigidBody2D"]
polygon = PackedVector2Array(-40, -40, 80, -40, 80, -30, 50, -30, 50, -20, 30, -20, 30, -10, 20, -10, 20, 10, 10, 10, 10, 30, 0, 30, 0, 50, -10, 50, -10, 60, -20, 60, -20, 90, -30, 90, -30, 100, -40, 100)

[node name="Polygon2D" type="Polygon2D" parent="chunks/RigidBody2D"]
texture_filter = 1
texture_repeat = 1
position = Vector2(-40, -40)
texture = ExtResource("6_lobm0")
texture_scale = Vector2(0.1, 0.1)
polygon = PackedVector2Array(0, 0, 120, 0, 120, 10, 90, 10, 90, 20, 70, 20, 70, 30, 60, 30, 60, 50, 50, 50, 50, 70, 40, 70, 40, 90, 30, 90, 30, 100, 20, 100, 20, 130, 10, 130, 10, 140, 0, 140)

[node name="RigidBody2D2" type="RigidBody2D" parent="chunks"]
position = Vector2(61.5387, -18.2782)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="chunks/RigidBody2D2"]
polygon = PackedVector2Array(20, -60, -20, -60, -20, -50, -50, -50, -50, -40, -70, -40, -70, -30, -80, -30, -80, -20, -60, -20, -60, -10, -30, -10, -30, 10, -20, 10, -20, 20, 0, 20, 0, 30, 10, 30, 10, 50, 20, 50)

[node name="Polygon2D" type="Polygon2D" parent="chunks/RigidBody2D2"]
texture_filter = 1
texture_repeat = 1
position = Vector2(-140, -60)
texture = ExtResource("6_lobm0")
texture_scale = Vector2(0.1, 0.1)
polygon = PackedVector2Array(120, 0, 160, 0, 160, 110, 150, 110, 150, 90, 140, 90, 140, 80, 120, 80, 120, 70, 110, 70, 110, 50, 80, 50, 80, 40, 60, 40, 60, 30, 70, 30, 70, 20, 90, 20, 90, 10, 120, 10)

[node name="RigidBody2D3" type="RigidBody2D" parent="chunks"]
position = Vector2(1.53867, 1.72184)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="chunks/RigidBody2D3"]
polygon = PackedVector2Array(-20, -40, 0, -40, 0, -30, 30, -30, 30, -10, 40, -10, 40, 0, 60, 0, 60, 10, 70, 10, 70, 40, 30, 40, 30, 50, -10, 50, -10, 40, -60, 40, -60, 20, -50, 20, -50, 10, -40, 10, -40, -10, -30, -10, -30, -30, -20, -30)

[node name="Polygon2D" type="Polygon2D" parent="chunks/RigidBody2D3"]
texture_filter = 1
texture_repeat = 1
position = Vector2(-80, -80)
texture = ExtResource("6_lobm0")
texture_scale = Vector2(0.1, 0.1)
polygon = PackedVector2Array(120, 80, 140, 80, 140, 90, 150, 90, 150, 120, 110, 120, 110, 130, 70, 130, 70, 120, 20, 120, 20, 100, 30, 100, 30, 90, 40, 90, 40, 70, 50, 70, 50, 50, 60, 50, 60, 40, 80, 40, 80, 50, 110, 50, 110, 70, 120, 70)

[node name="RigidBody2D4" type="RigidBody2D" parent="chunks"]
position = Vector2(1.53867, 61.7218)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="chunks/RigidBody2D4"]
polygon = PackedVector2Array(-10, -20, -10, -10, 30, -10, 30, -20, 70, -20, 70, -30, 80, -30, 80, 20, -80, 20, -80, 0, -70, 0, -70, -10, -60, -10, -60, -20)

[node name="Polygon2D" type="Polygon2D" parent="chunks/RigidBody2D4"]
texture_filter = 1
texture_repeat = 1
position = Vector2(-80, -140)
texture = ExtResource("6_lobm0")
texture_scale = Vector2(0.1, 0.1)
polygon = PackedVector2Array(0, 160, 160, 160, 160, 110, 150, 110, 150, 120, 110, 120, 110, 130, 70, 130, 70, 120, 20, 120, 20, 130, 10, 130, 10, 140, 0, 140)

[node name="Player" parent="." instance=ExtResource("1_fkxig")]
position = Vector2(1200, 470)

[node name="BulletTrail" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 0, 0)
width = 2.0
default_color = Color(0.329412, 0.329412, 0.329412, 0.956863)

[node name="Timer" type="Timer" parent="BulletTrail"]
wait_time = 0.1
one_shot = true

[connection signal="bullet_trail" from="Player" to="." method="_on_player_bullet_trail"]
[connection signal="timeout" from="BulletTrail/Timer" to="." method="_on_timer_timeout"]
